@@ -51,7 +51,6 @@ valgrind: $(noinst_PROGRAMS) $(noinst_SCRIPTS)
 LDADD_SG=$(top_builddir)/src/libsimgrid.la 
 LDADD_RL=$(top_builddir)/src/libgras.la   
 
-xbt_ex_test_SOURCES=          xbt/ex_test.c xbt/ex_test_ts.c xbt/ex_test_ts.h
 xbt_ex_test_LDADD=            $(LDADD_RL)
 
 xbt_log_usage_LDADD=          $(LDADD_RL)
