@@ -71,7 +71,7 @@ test=""
 for testpart in $xbt_TESTS $gras_TESTS $surf_TESTS
 do
   test="$test $testpart"
-  if echo $test | grep ';' ; then
+  if echo $test | grep  ';' >/dev/null ; then
     # end of test declaration found.
   
     # we must have a space after the ;
@@ -83,56 +83,68 @@ do
     # Cleanup test declaration, run it.
     test=`echo $test | sed 's/;//'`
     
-    tests_nb=`expr $tests_nb + 1`
-    echo "#### Test $test"
-    if [ x@EXEEXT@ = x ] ; then
-      :
+    if [ ".$1" = .windump ] ; then
+      test=`echo $test | sed 's|/home.*testsuite/|//10.0.2.4/qemu/testsuite/|'`
+      test=`echo $test | sed 's|/|\\\\|g'`
+      echo "\\\\10.0.2.4\\qemu\\testsuite\\$test"
+      echo "@if errorlevel 1 echo ERRORERRORERRORERRORERRORERRORERRORERRORERRORERRORERRORERROR"
+      test=""
     else
-      # overwrites "valgrind" as a value, but should be exclusive.
-      exenv=wine  
-    fi
-    exenvsave=$exenv	
-    if [ "x$test" = "xxbt/dict_crash@EXEEXT@" ] ; then 
-      if echo $exenv | grep valgrind >/dev/null ; then
- 	exenv=
+      tests_nb=`expr $tests_nb + 1`
+      echo "#### Test $test"
+      if [ x@EXEEXT@ = x ] ; then
+        :
+      else
+        # overwrites "valgrind" as a value, but should be exclusive.
+        exenv=wine  
       fi
-      $exenv ./$test --xbt-log="root.thres=info" 2>&1
-      retval=$?
-    else 
-      if [ x@EXEEXT@ != x ] && [ x$exenv = xwine ] ; then 
-        if echo ${test} | grep @EXEEXT@ >/dev/null ; then : ; else
-          exenv=""
+      exenvsave=$exenv	
+      if [ "x$test" = "xxbt/dict_crash@EXEEXT@" ] ; then 
+        if echo $exenv | grep valgrind >/dev/null ; then
+ 	  exenv=
         fi
+        $exenv ./$test --xbt-log="root.thres=info" 2>&1
+        retval=$?
+      else 
+        if [ x@EXEEXT@ != x ] && [ x$exenv = xwine ] ; then 
+          if echo ${test} | grep @EXEEXT@ >/dev/null ; then : ; else
+            exenv=""
+          fi
+        fi
+        $exenv ./$test --xbt-log="root.thres=info" 2>&1
+        retval=$?
       fi
-      $exenv ./$test --xbt-log="root.thres=info" 2>&1
-      retval=$?
-    fi
-    exenv=$exenvsave
-    if [ $retval != 0 ] ; then if [ $retval != 77 ]; then
-      echo "## failed" # . Rerun $test with full details."
+      exenv=$exenvsave
+      if [ $retval != 0 ] ; then if [ $retval != 77 ]; then
+        echo "## failed" # . Rerun $test with full details."
 #      if [ "x$test" = "xdict_crash" ] ; then
 #      $exenv ./$test --xbt-log="root.thres=debug" 2>&1
 #    else 
 #      $exenv ./$test --xbt-log="root.thres=debug" 2>&1
 #    fi
-      failed_nb=`expr $failed_nb + 1`
-      echo "  $test (returned $retval)" >> test.failed
-    else # retval == 77
-      echo "## Ignored since it returned 77"
-      ignored_nb=`expr $ignored_nb + 1`
-      echo "  $test" >> test.ignored
-    fi else
-      echo "## Success"
-      success_nb=`expr $success_nb + 1`
-      echo "  $test" >> test.success
-    fi
-    test=""
-  fi # end of ';' found in test declaration => run it
+        failed_nb=`expr $failed_nb + 1`
+        echo "  $test (returned $retval)" >> test.failed
+      else # retval == 77
+        echo "## Ignored since it returned 77"
+        ignored_nb=`expr $ignored_nb + 1`
+        echo "  $test" >> test.ignored
+      fi else
+        echo "## Success"
+        success_nb=`expr $success_nb + 1`
+        echo "  $test" >> test.success
+      fi
+      test=""
+    fi # end of ';' found in test declaration => run it
+  fi # end of run it only if not in windump mode
 done
 
 ###
 ### Display summary
 ###
+if [ ".$1" = .windump ] ; then
+  echo pause
+  exit 0
+fi
 
 echo
 echo "#### Summary"
